--- a/ssocaptcha.html
+++ b/ssocaptcha.html
@@ -27,7 +27,7 @@
         </header>
         <section id="main">
             <h1>One more step</h1>
-            <div class="submit>::CAPTCHA_BOX::</div>
+            <div class="submit">::CAPTCHA_BOX::</div>
         </section>
     </div>
 </html>
