--- a/ssocaptcha.html
+++ b/ssocaptcha.html
@@ -29,5 +29,12 @@
             <h1>One more step</h1>
             <div class="submit">::CAPTCHA_BOX::</div>
         </section>
+        <footer>
+            <section id="new-account">
+                <div class="create-account">
+                    <p>Completing the CAPTCHA proves you are a human and helps us to prevent bots from accessing EVE Online.</p>
+                </div>
+            </section>
+        </footer>
     </div>
 </html>
