--- a/ssocaptcha.html
+++ b/ssocaptcha.html
@@ -10,19 +10,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1.0, width=device-width, maximum-scale=1.0" />
     <title>Log In</title>
-    <link rel="preload" href="https://login.eveonline.com/src/css/Site.min.css?v=637351632520000000" as="style">
-    <link rel="preload" href="https://login.eveonline.com/src/css/themes/default/style.min.css?v=637351632520000000"
-        as="style">
-    <link href="https://login.eveonline.com/src/css/Site.min.css?v=637351632520000000" rel="stylesheet"
-        type="text/css" />
-    <link href="https://login.eveonline.com/src/css/themes/default/style.min.css?v=637351632520000000" rel="stylesheet"
-        type="text/css" />
-
+    <link href="https://login.eveonline.com/src/css/Site.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://login.eveonline.com/src/css/themes/default/style.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://web-cdn.eveonline.com/aws/eveonline/sso/sso-theme.min.css" rel="stylesheet" type="text/css" />
 <body id="loginbody" class="en">
     <div id="container">
         <header>
             <a href="#" class="logo">
-                <img src="https://web.ccpgamescdn.com/aws/eveonline/sso/eve-logo.svg" />
+                <img src="https://web-cdn.eveonline.com/aws/eveonline/sso/eve-logo.svg" />
             </a>
         </header>
         <section id="main">
@@ -33,6 +28,8 @@
             <section id="new-account">
                 <div class="create-account">
                     <p>Completing the CAPTCHA proves you are a human and helps us to prevent bots from accessing EVE Online.</p>
+                    <p>Client IP: - ::CLIENT_IP::</p>
+                    <p>Ray ID: ::RAY_ID::</p>
                 </div>
             </section>
         </footer>
