--- a/ssocaptcha.html
+++ b/ssocaptcha.html
@@ -5,7 +5,6 @@
 <!--[if gt IE 8]><!-->
 <html class="no-js" lang="en">
 <!--<![endif]-->
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1.0, width=device-width, maximum-scale=1.0" />
@@ -13,6 +12,7 @@
     <link href="https://login.eveonline.com/src/css/Site.min.css" rel="stylesheet" type="text/css" />
     <link href="https://login.eveonline.com/src/css/themes/default/style.min.css" rel="stylesheet" type="text/css" />
     <link href="https://web-cdn.eveonline.com/aws/eveonline/sso/sso-theme.min.css" rel="stylesheet" type="text/css" />
+</head>
 <body id="loginbody" class="en">
     <div id="container">
         <header>
@@ -34,4 +34,5 @@
             </section>
         </footer>
     </div>
+  </body>
 </html>
