--- a/ssocaptcha.html
+++ b/ssocaptcha.html
@@ -22,14 +22,15 @@
         </header>
         <section id="main">
             <h1>One more step</h1>
+            <p>Completing the CAPTCHA proves you are a human and helps us to prevent bots from accessing EVE Online.</p>
             <div class="submit">::CAPTCHA_BOX::</div>
         </section>
         <footer>
             <section id="new-account">
                 <div class="create-account">
-                    <p>Completing the CAPTCHA proves you are a human and helps us to prevent bots from accessing EVE Online.</p>
                     <p>Client IP: - ::CLIENT_IP::</p>
                     <p>Ray ID: ::RAY_ID::</p>
+                    <p><a href="https://support.eveonline.com/hc/en-us/requests/new?ticket_form_id=136669">Problems logging in?</a></p>
                 </div>
             </section>
         </footer>
