--- a/ssocaptcha.html
+++ b/ssocaptcha.html
@@ -30,7 +30,7 @@
                 <div class="create-account">
                     <p>Client IP: - ::CLIENT_IP::</p>
                     <p>Ray ID: ::RAY_ID::</p>
-                    <p><a href="https://support.eveonline.com/hc/en-us/requests/new?ticket_form_id=136669">Problems logging in?</a></p>
+                    <p>Problems logging in? File a <a href="https://support.eveonline.com/hc/en-us/requests/new?ticket_form_id=136669">support ticket</a> including the details above.</p>
                 </div>
             </section>
         </footer>
