--- a/ssocaptcha.html
+++ b/ssocaptcha.html
@@ -23,7 +23,7 @@
         <section id="main">
             <h1>One more step</h1>
             <p>Completing the CAPTCHA proves you are a human and helps us to prevent bots from accessing EVE Online.</p>
-            <div class="submit">::CAPTCHA_BOX::</div>
+            <p>::CAPTCHA_BOX::</p>
         </section>
         <footer>
             <section id="new-account">
