--- a/ssocaptcha.html
+++ b/ssocaptcha.html
@@ -23,15 +23,13 @@
         <section id="main">
             <h1>One more step</h1>
             <p>Completing the CAPTCHA proves you are a human and helps us to prevent bots from accessing EVE Online.</p>
-            <p>::CAPTCHA_BOX::</p>
+            <h1>::CAPTCHA_BOX::</h1>
         </section>
         <footer>
             <section id="new-account">
-                <div class="create-account">
-                    <p>Client IP: - ::CLIENT_IP::</p>
-                    <p>Ray ID: ::RAY_ID::</p>
-                    <p>Problems? <br/> File a <a href="https://support.eveonline.com/hc/en-us/requests/new?ticket_form_id=136669">support ticket</a> including the details above.</p>
-                </div>
+                <p>Client IP: - ::CLIENT_IP::</p>
+                <p>Ray ID: ::RAY_ID::</p>
+                <p>Problems? <br/> File a <a href="https://support.eveonline.com/hc/en-us/requests/new?ticket_form_id=136669">support ticket</a> including the details above.</p>
             </section>
         </footer>
     </div>
