--- a/ssocaptcha.html
+++ b/ssocaptcha.html
@@ -24,12 +24,14 @@
             <h1>One more step</h1>
             <p>Completing the CAPTCHA proves you are a human and helps us to prevent bots from accessing EVE Online.</p>
             <h1>::CAPTCHA_BOX::</h1>
+            <span class="difficulties">
+                <p>Problems logging in? Submit a <a href="https://support.eveonline.com/hc/en-us/requests/new?ticket_form_id=136669">support ticket</a> including the diagnostic details below.</p>
+            </span>
         </section>
         <footer>
             <section id="new-account">
                 <p>Client IP: - ::CLIENT_IP::</p>
                 <p>Ray ID: ::RAY_ID::</p>
-                <p>Problems? <br/> File a <a href="https://support.eveonline.com/hc/en-us/requests/new?ticket_form_id=136669">support ticket</a> including the details above.</p>
             </section>
         </footer>
     </div>
