--- a/ssocaptcha.html
+++ b/ssocaptcha.html
@@ -30,8 +30,7 @@
         </section>
         <footer>
             <section id="new-account">
-                <p>Client IP: - ::CLIENT_IP::</p>
-                <p>Ray ID: ::RAY_ID::</p>
+                <p>Client IP: - ::CLIENT_IP::<br/>Ray ID: ::RAY_ID::</p>
             </section>
         </footer>
     </div>
