--- a/ssocaptcha.html
+++ b/ssocaptcha.html
@@ -11,14 +11,11 @@
     <title>Log In</title>
     <link href="https://login.eveonline.com/src/css/Site.min.css" rel="stylesheet" type="text/css" />
     <link href="https://login.eveonline.com/src/css/themes/default/style.min.css" rel="stylesheet" type="text/css" />
-    <link href="https://web-cdn.eveonline.com/aws/eveonline/sso/sso-theme.min.css" rel="stylesheet" type="text/css" />
 </head>
 <body id="loginbody" class="en">
     <div id="container">
         <header>
-            <a href="#" class="logo">
-                <img src="https://web-cdn.eveonline.com/aws/eveonline/sso/eve-logo.svg" />
-            </a>
+            <a href="#" class="logo"></a>
         </header>
         <section id="main">
             <h1>One more step</h1>
