--- a/ssocaptcha.html
+++ b/ssocaptcha.html
@@ -9,8 +9,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1.0, width=device-width, maximum-scale=1.0" />
     <title>Log In</title>
-    <link href="https://login.eveonline.com/src/css/Site.min.css" rel="stylesheet" type="text/css" />
-    <link href="https://login.eveonline.com/src/css/themes/default/style.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://login.eveonline.com/css/Site.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://login.eveonline.com/css/themes/default/style.min.css" rel="stylesheet" type="text/css" />
 </head>
 <body id="loginbody" class="en">
     <div id="container">
